force-app/main/default/objects/Deployment_Approval__c/Deployment_Approval__c.object-meta.xml
<CustomObject>
    <label>Deployment Approval</label>
    <nameField>
        <displayFormat>DA-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Deployment Approval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>