force-app/main/default/objects/Deployment_Approval__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Deployment Approvals</relationshipLabel>
    <relationshipName>Deployment_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>