force-app/main/default/objects/Deployment_Approval__c/fields/Org__c.field-meta.xml
<CustomField>
    <fullName>Org__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Org</label>
    <referenceTo>Organisation__c</referenceTo>
    <relationshipLabel>Deployment Approvals</relationshipLabel>
    <relationshipName>Deployment_Approvals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>