force-app/main/default/objects/Deployment_Approval__c/fields/Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Process_Type__c</fullName>
    <label>Process Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Validate</fullName>
            </value>
            <value>
                <fullName>Rollback (Validate)</fullName>
            </value>
            <value>
                <fullName>Rollback (Deployment)</fullName>
            </value>
            <value>
                <fullName>Schedule Deployment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>